Minor refactoring, index.js#CircularSlider: declare new Ball with parameter 'settings.ballColor' instead of 'options.ballColor' (settings is merged with default options), index.html: Make example sliders reference type to see if drawings in middle of Slider render and add extra div with same id and divs with same class name to check for conflicts.

--- a/examples/index.html
+++ b/examples/index.html
@@ -13,8 +13,14 @@
 
   <body>
     <div id="drawing" style="border:1px solid;margin: 20px;height: 300px; width: 600px;"></div>
+    <br>
+    <div id="drawing" style="border:1px solid;margin: 20px;height: 300px; width: 600px;"></div>
+    <br>
+    <div class="drawing" style="border:1px solid;margin: 20px;height: 300px; width: 600px;"></div>
+    <br>
+    <div class="drawing" style="border:1px solid;margin: 20px;height: 300px; width: 600px;"></div>
     <script type="text/javascript">
-      new CircularSliders.Canvas("drawing", [{step: 20}, {name: "foo-bar"}]);
+      new CircularSliders.Canvas("drawing", [{type: "Plain"}, {type: "Shoe"}]);  
     </script>
   </body>
 </html>
